more changes and additions

--- a/index.html
+++ b/index.html
@@ -2869,7 +2869,7 @@
                 <div class="skill-pill">
                   <div>
                     <div class="skill-label">Languages &amp; Frameworks</div>
-                    <div class="skill-level">Python · Java · Node.js · React · C/C#/C++ · ASP.NET · Flutter</div>
+                    <div class="skill-level">Python · Java · Node.js · React · C/C#/C++ · ASP.NET · Flutter · Electron.js</div>
                   </div>
                   <span>Advanced</span>
                 </div>
@@ -2927,6 +2927,32 @@
                 </div>
                 <div class="skill-bar-track">
                   <div class="skill-bar-fill" style="width: 94%; animation-delay: 0.4s;"></div>
+                </div>
+              </div>
+
+              <div>
+                <div class="skill-pill">
+                  <div>
+                    <div class="skill-label">Desktop &amp; Distribution</div>
+                    <div class="skill-level">Electron.js UI/UX · MSI installers · NSIS installers</div>
+                  </div>
+                  <span>Advanced</span>
+                </div>
+                <div class="skill-bar-track">
+                  <div class="skill-bar-fill" style="width: 88%; animation-delay: 0.6s;"></div>
+                </div>
+              </div>
+
+              <div>
+                <div class="skill-pill">
+                  <div>
+                    <div class="skill-label">Development Tools &amp; Workflow</div>
+                    <div class="skill-level">GitHub Copilot · Devin AI · OpenAI Codex · AI-assisted development</div>
+                  </div>
+                  <span>Expert</span>
+                </div>
+                <div class="skill-bar-track">
+                  <div class="skill-bar-fill" style="width: 93%; animation-delay: 0.7s;"></div>
                 </div>
               </div>
             </div>
@@ -3195,18 +3221,16 @@
         <div class="section-header">
           <div>
             <div class="section-title">my gpts</div>
-            <div class="section-kicker">Custom AI assistants built for identity, doctrine, and strategy.</div>
+            <div class="section-kicker">Domain-specific GPTs with custom instructions, knowledge bases, and production constraints.</div>
           </div>
           <div class="section-caption">
-            These GPTs represent different facets of my work: personal voice, doctrinal study, and strategic analysis.
+            Domain-specific AI assistants with custom instructions, knowledge bases, and production-ready constraints.
           </div>
         </div>
 
         <div class="gpts-intro">
           <p>
-            I build custom GPTs that serve distinct purposes—from capturing my personal voice and values, to providing
-            doctrinally faithful resources for spiritual study, to offering strategic frameworks for understanding human
-            behavior and emotional dynamics. Each GPT is crafted with specific intent and audience in mind.
+            Custom GPTs require deep prompt engineering, system instruction design, and knowledge base curation to create domain-specific assistants that outperform general-purpose models. I build GPTs with carefully crafted instructions, structured knowledge retrieval, and safety constraints—turning raw language models into production-ready tools for specific use cases. This demonstrates expertise in AI orchestration, prompt optimization, and building AI systems that solve real problems rather than just demoing capabilities.
           </p>
         </div>
 
