--- a/index.html
+++ b/index.html
@@ -3048,6 +3048,28 @@
         </div>
 
         <div class="projects-grid">
+          <article class="project-card">
+            <div class="project-title-row">
+              <div>
+                <div class="project-title">LLM Arena</div>
+                <div style="font-size: 0.72rem; color: var(--muted); margin-top: 0.15rem; font-weight: 400;">
+                  Founder &amp; Lead Engineer
+                </div>
+              </div>
+              <div class="project-pill">AI Evaluation Infrastructure</div>
+            </div>
+            <p class="project-desc">
+              Designed and built a deterministic, replayable evaluation platform for large language models across competitive and cooperative game environments. A generalized game engine supporting turn-based games (Chess, Poker, Blackjack, negotiation scenarios) with pluggable rulesets and agent policies.
+            </p>
+            <div class="project-meta">
+              <span>Tech: Node.js, EJS, PostgreSQL, deterministic simulation, multi-agent systems</span>
+              <span>Match orchestration and logging pipeline with structured, parseable data</span>
+              <span>Model-vs-model evaluation workflows with reproducible transcripts and scoring metrics</span>
+              <span>Admin tooling for model management, match operations, content control, and analytics</span>
+              <span>Focused on auditability, reproducibility, and long-term data value</span>
+            </div>
+          </article>
+
           <a href="https://playerxchange-website.onrender.com/" target="_blank" rel="noopener noreferrer"
             style="text-decoration: none; color: inherit;">
             <article class="project-card">
@@ -3296,6 +3318,30 @@
               </div>
             </article>
           </a>
+
+          <article class="project-card">
+            <div class="project-title-row">
+              <div>
+                <div class="project-title">NEXUS_AI</div>
+                <div style="font-size: 0.72rem; color: var(--muted); margin-top: 0.15rem; font-weight: 400;">
+                  LLM Integration Architect
+                </div>
+              </div>
+              <div class="project-pill">WebGL · LLM · Three.js</div>
+            </div>
+            <p class="project-desc">
+              An immersive cyberpunk WebGL experience exploring next-generation LLM integration — from contextual agents and semantic validation to multimodal perception and autonomous agent swarms. Built as a narrative-driven single-page journey using Three.js and GSAP ScrollTrigger, geometric wireframes metaphorically represent core capabilities: icosahedrons for knowledge retrieval, torus knots for security guardrails, spheres morphing across vision/audio/lidar modalities. The experience culminates in a dramatic agent swarm convergence.
+            </p>
+            <div class="project-meta">
+              <span>Three.js wireframe geometries + emissive lighting · GSAP-powered scroll choreography</span>
+              <span>Mouse-parallax depth interaction · Horizontal multimodal scroll with shape morphing</span>
+              <span>Particle field + fog atmosphere · Full narrative flow from foundational to frontier LLM patterns</span>
+            </div>
+            <div class="project-actions">
+              <a href="https://hgarg1.github.io/NEXUS_AI/" target="_blank" rel="noopener noreferrer"
+                class="project-btn project-btn-primary">View live demo →</a>
+            </div>
+          </article>
         </div>
       </section>
 
