--- a/index.html
+++ b/index.html
@@ -3048,27 +3048,30 @@
         </div>
 
         <div class="projects-grid">
-          <article class="project-card">
-            <div class="project-title-row">
-              <div>
-                <div class="project-title">LLM Arena</div>
-                <div style="font-size: 0.72rem; color: var(--muted); margin-top: 0.15rem; font-weight: 400;">
-                  Founder &amp; Lead Engineer
+          <a href="llm-arena.archiegarg.me" target="_blank" rel="noopener noreferrer"
+            style="text-decoration: none; color: inherit;">
+            <article class="project-card">
+              <div class="project-title-row">
+                <div>
+                  <div class="project-title">LLM Arena</div>
+                  <div style="font-size: 0.72rem; color: var(--muted); margin-top: 0.15rem; font-weight: 400;">
+                    Founder &amp; Lead Engineer
+                  </div>
                 </div>
+                <div class="project-pill">AI Evaluation Infrastructure</div>
               </div>
-              <div class="project-pill">AI Evaluation Infrastructure</div>
-            </div>
-            <p class="project-desc">
-              Designed and built a deterministic, replayable evaluation platform for large language models across competitive and cooperative game environments. A generalized game engine supporting turn-based games (Chess, Poker, Blackjack, negotiation scenarios) with pluggable rulesets and agent policies.
-            </p>
-            <div class="project-meta">
-              <span>Tech: Node.js, EJS, PostgreSQL, deterministic simulation, multi-agent systems</span>
-              <span>Match orchestration and logging pipeline with structured, parseable data</span>
-              <span>Model-vs-model evaluation workflows with reproducible transcripts and scoring metrics</span>
-              <span>Admin tooling for model management, match operations, content control, and analytics</span>
-              <span>Focused on auditability, reproducibility, and long-term data value</span>
-            </div>
-          </article>
+              <p class="project-desc">
+                Designed and built a deterministic, replayable evaluation platform for large language models across competitive and cooperative game environments. A generalized game engine supporting turn-based games (Chess, Poker, Blackjack, negotiation scenarios) with pluggable rulesets and agent policies.
+              </p>
+              <div class="project-meta">
+                <span>Tech: Node.js, EJS, PostgreSQL, deterministic simulation, multi-agent systems</span>
+                <span>Match orchestration and logging pipeline with structured, parseable data</span>
+                <span>Model-vs-model evaluation workflows with reproducible transcripts and scoring metrics</span>
+                <span>Admin tooling for model management, match operations, content control, and analytics</span>
+                <span>Focused on auditability, reproducibility, and long-term data value</span>
+              </div>
+            </article>
+          </a>
 
           <a href="https://playerxchange-website.onrender.com/" target="_blank" rel="noopener noreferrer"
             style="text-decoration: none; color: inherit;">
